# texture_sort

./: .env  .gitignore  .gitmodules
src/bringup/: package.xml  setup.py
src/bringup/config/: system_params.yaml
src/bringup/launch/: external_camera_debug.launch.py  system_bringup.launch.py  wrist_camera_debug.launch.py
src/bringup/test/: test_import.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: ExecuteGrasp.action
src/interfaces/msg/: ObjectGrounding.msg  ObjectGroundingArray.msg  ObjectRecord.msg  TaskState.msg
src/interfaces/srv/: DetectObjectPose.srv  GetNextCategory.srv  MarkCategoryDelivered.srv  StartSortAndDelivery.srv
src/manipulation/: package.xml  pre_grasp.json  pre_load.json  setup.py
src/manipulation/manipulation/: grasp_node.py  manipulation_node.py
src/manipulation/test/: test_import.py
src/manipulation/texture_sorting_manipulation/: manipulation_node.py
src/navigation/: package.xml  setup.py
src/navigation/navigation/: delivery_node.py
src/navigation/resource/: texture_sorting_navigation
src/navigation/test/: test_import.py
src/perception/: apriltag_overlay.py  package.xml  setup.py
src/perception/perception/: apriltag_overlay.py  kinova_rtsp_bridge.py  kinova_wrist_cam_node.py  vision_node.py  vnn_overlay.py
src/perception/resource/: texture_sorting_perception
src/perception/test/: test_import.py
src/perception/texture_sorting_perception/: apriltag_overlay.py  tactile_node.py
src/task_manager/: package.xml  setup.py
src/task_manager/resource/: texture_sorting_task_manager
src/task_manager/task_manager/: task_manager_node.py
src/task_manager/test/: test_import.py
src/task_manager/texture_sorting_task_manager/: task_manager_node.py
texture_sort_ws/src/bringup/config/: system_params.yaml
texture_sort_ws/src/bringup/launch/: system_bringup.launch.py
texture_sort_ws/src/bringup/resource/: texture_sorting_bringup
texture_sort_ws/src/bringup/test/: test_import.py
texture_sort_ws/src/interfaces/: CMakeLists.txt
texture_sort_ws/src/interfaces/action/: LoadObjectIntoBox.action
texture_sort_ws/src/interfaces/msg/: DeliveryState.msg  ObjectGrounding.msg  ObjectPose.msg  TextureClassification.msg
texture_sort_ws/src/interfaces/srv/: CheckBaseReady.srv  ClassifyTexture.srv  GetObjectsInCategory.srv  InitializeSceneObjects.srv
texture_sort_ws/src/manipulation/: setup.cfg
texture_sort_ws/src/manipulation/resource/: texture_sorting_manipulation
texture_sort_ws/src/navigation/texture_sorting_navigation/: delivery_node.py
texture_sort_ws/src/perception/texture_sorting_perception/: models.py  tactile_node.py  vision_node.py
texture_sort_ws/src/task_manager/: package.xml
texture_sort_ws/src/task_manager/test/: test_import.py
texture_sort_ws/src/task_manager/texture_sorting_task_manager/: task_manager_node.py
