<?xml version="1.0"?>
<package format="3">
  <name>texture_sorting_bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for the texture sorting system.</description>
  <maintainer email="helenlu66@gmail.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>texture_sorting_interfaces</depend>
  <depend>texture_sorting_perception</depend>
  <depend>texture_sorting_manipulation</depend>
  <depend>texture_sorting_navigation</depend>
  <depend>texture_sorting_task_manager</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
