<?xml version="1.0"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Launch and configuration package for the texture sorting system.</description>
  <maintainer email="helenlu66@gmail.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>interfaces</depend>
  <depend>perception</depend>
  <depend>manipulation</depend>
  <depend>navigation</depend>
  <depend>task_manager</depend>
  <depend>rqt_image_view</depend>
  <depend>realsense2_camera</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
