<?xml version="1.0"?>
<package format="3">
  <name>texture_sorting_task_manager</name>
  <version>0.1.0</version>
  <description>High-level task manager coordinating perception, manipulation, and delivery.</description>
  <maintainer email="helenlu66@gmail.com">User</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>action_msgs</depend>
  <depend>texture_sorting_interfaces</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
